--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^18.0.0",
+    "eslint-config-prettier": "6.15.0",
+    "eslint-plugin-prettier": "3.2.0",
+    "prettier": "^2.7.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.0.0",
     "typescript": "^4.7.4"
