--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "eslint-plugin-prettier": "3.2.0",
     "prettier": "^2.7.1",
     "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.0.0",
+    "tsconfig-paths": "3.9.0",
     "typescript": "^4.7.4"
   },
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint . --ext .ts --fix"
   },
