--- a/ormconfig.json
+++ b/ormconfig.json
@@ -8,6 +8,6 @@
     "entities": ["*/entity/*.js"],
     "migrations": ["./src/shared/typeorm/migrations/*.ts"],
     "cli":{
-        "migrationDir":"./src/shared/typeorm/migrations"
+        "migrationsDir":"./src/shared/typeorm/migrations"
     }
 }
