--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,11 +1,11 @@
 {
     "type": "postgres",
     "host": "localhost",
-    "port": 5433,
+    "port": 5432,
     "username": "postgres",
     "password": "1234",
     "database": "apivendas",
-    "entities": ["*/entity/*.js"],
+    "entities": ["./src/modules/**/typeorm/entities/*.ts"],
     "migrations": ["./src/shared/typeorm/migrations/*.ts"],
     "cli":{
         "migrationsDir":"./src/shared/typeorm/migrations"
