--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Pedro Henrique <pedroh93601@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/joi": "^17.2.3",
@@ -24,6 +25,7 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "celebrate": "^15.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
