--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.0",
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-prettier": "3.2.0",
@@ -30,6 +31,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.29"
