--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
+    "@types/date-fns": "^2.6.0",
     "@types/express": "^4.17.13",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.8",
@@ -30,6 +31,7 @@
     "bcrypt": "^5.0.1",
     "celebrate": "^15.0.1",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
