--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Pedro Henrique <pedroh93601@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/date-fns": "^2.6.0",
     "@types/express": "^4.17.13",
@@ -28,7 +28,7 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
     "cors": "^2.8.5",
     "date-fns": "^2.29.1",
