--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,7 +1,7 @@
 {
     "type": "postgres",
-    "host": "localhost",
-    "port": 5433,
+    "host": "db",
+    "port": 5432,
     "username": "postgres",
     "password": "1234",
     "database": "apivendas",
