feat: config redis cache

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,20 @@ services:
     command: yarn dev
     depends_on:
       - db
+      - cache
     ports:
       - "3000:3000"
     volumes:
       - .:/usr/app
+  
+  cache:
+    container_name: 'cache'
+    image: redis:6.2-alpine
+    restart: always
+    ports:
+      - '6379:6379'
+    command: redis-server --save 20 1 --loglevel warning --requirepass 1234
+    volumes: 
+      - ./cache:/data
     
     
