--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@types/cors": "^2.8.12",
     "@types/date-fns": "^2.6.0",
     "@types/express": "^4.17.13",
+    "@types/ioredis": "^4.28.10",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.0.0",
     "@types/nodemailer": "^6.4.5",
+    "@types/redis": "^4.0.11",
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-prettier": "3.2.0",
     "prettier": "^2.7.1",
@@ -38,10 +40,12 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "ioredis": "^5.2.3",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.7",
     "pg": "^8.7.3",
+    "redis": "^4.3.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.29",
     "typeorm-pagination": "^2.0.3"
