--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com-personal:pedro256/API-Restful-Javascript-com-Node.js-Typescript-TypeORM-etc.git",
-  "author": "Pedro Henrique <pedroh93601@gmail.com>",
+  "author": "Pedro Henrique",
   "license": "MIT",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
